--- a/index.html
+++ b/index.html
@@ -62,6 +62,58 @@
 
     <div class="container" id="cardBox">
 
+    </div><div class="button-area">
+        <div class="button-bg">
+            <button class="newBtn" onclick="openForm()" id="addNew">
+                Add New Book
+            </button>
+        </div>
+    </div>
+    <dialog id="bookForm">
+        <div class="bookInfo">
+
+            <label for="title">Title:</label>
+            <input type="text" class="box" id="title" name="title">
+            <label for="author">Author: </label>
+            <input type="text" class="box" id="author" name="author">
+            <label for="pagenumber">Page Number:</label>
+            <input type="text" class="box" id="pagenumber" name="pagenumber">
+            <label for="description">Description:</label>
+            <textarea id="description" class="box" name="description"></textarea>
+
+        </div>
+        <button class="btn" id="addBook" onclick="addBook()">
+            Add
+        </button>
+        <button class="btn" id="cancel" onclick="cancel()">
+            Cancel
+        </button>
+    </dialog>
+
+
+    <dialog id="editForm">
+        <div class="bookInfo">
+
+            <label for="titleEdit">Title:</label>
+            <input type="text" class="box" id="titleEdit" name="title">
+            <label for="authorEdit">Author: </label>
+            <input type="text" class="box" id="authorEdit" name="author">
+            <label for="pagenumberEdit">Page Number:</label>
+            <input type="text" class="box" id="pagenumberEdit" name="pagenumber">
+            <label for="descriptionEdit">Description:</label>
+            <textarea id="descriptionEdit" class="box" name="description"></textarea>
+
+        </div>
+        <button class="btn" id="saveBook">
+            Save
+        </button>
+        <button class="btn" id="cancelEdit" onclick="cancelEdit()">
+            Cancel
+        </button>
+    </dialog>
+
+    <div class="container" id="cardBox">
+
     </div>
 
   <script src="script.js"></script>
